--- a/Coffee/Areas/Admin/Pages/Shared/_AdminLayout.cshtml
+++ b/Coffee/Areas/Admin/Pages/Shared/_AdminLayout.cshtml
@@ -44,6 +44,11 @@
                         <i></i> Event
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a asp-area="Admin" asp-page="/Lecturers/Index" class="nav-link text-white">
+                        <i></i> Lecturer
+                    </a>
+                </li>
                 <li>
                     <a asp-area="Admin" asp-page="/Orders/Index" class="nav-link text-white">
                         <i></i> Orders
